--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,7 @@
     <title>{{ title }}</title>
     {% else %}
     <title>Welcome to the best Movie Review website</title>
+    {% endif %}
 </head>
 <body>
     
