--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,17 +1,32 @@
-<!-- <h1>{{ massage }}</h1> -->
-
-
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% if title %}
-    <title>{{ title }}</title>
-    {% else %}
-    <title>Welcome to the best Movie Review website</title>
-    {% endif %}
-</head>
-<body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        {% import 'macros.html' as macro%}
+        {% if title %}
+        <title> {{ title }}</title>
+        {% else %}
+        <title> Welcome to the best Movie Review website </title>
+        {% endif %}
+    </head>
     
-</body>
+        <body>
+            <!-- Popular movie -->
+            <h3> Popular Movies</h3>
+            <ul>
+                {{ macro.displayMovieList(popular)}}
+            </ul>
+            <!-- Upcoming movie  -->
+            <h3> Upcoming Movies </h3>
+            <ul>
+                {{ macro.displayMovieList(upcoming)}}
+            </ul>
+            <!-- Now showing movie -->
+            <h3>Now Showing</h3>
+            <ul>
+                {{ macro.displayMovieList(now_showing)}}
+            </ul>
+        </body>
+   
 </html>
+
