--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -8,11 +8,18 @@
         <title> Welcome to the best Movie Review website </title>
         {% endif %}
     </head>
-    <body>
+    <body> -->
         <!-- Content block -->
 
-        {% block content %}
+        <!-- {% block content %}
 
         {% endblock%}
     </body>
-</html>
+</html> -->
+
+{% extends 'bootstrap/base.html'%}
+
+<!-- Navbar block  --> 
+{% block navbar %}
+    {% include 'navbar.html' %}
+{% endblock %}
