--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -9,24 +9,62 @@
         <title> Welcome to the best Movie Review website </title>
         {% endif %}
     </head>
-    
-        <body>
-            <!-- Popular movie -->
-            <h3> Popular Movies</h3>
-            <ul>
-                {{ macro.displayMovieList(popular)}}
-            </ul>
-            <!-- Upcoming movie  -->
-            <h3> Upcoming Movies </h3>
-            <ul>
-                {{ macro.displayMovieList(upcoming)}}
-            </ul>
-            <!-- Now showing movie -->
-            <h3>Now Showing</h3>
-            <ul>
-                {{ macro.displayMovieList(now_showing)}}
-            </ul>
-        </body>
-   
-</html>
+    <body> -->
 
+        <!-- Popular movie -->
+        <!-- <h3> Popular Movies</h3>
+            <ul> -->
+            <!-- {% for popular_movie in popular %}
+                <li>{{ popular_movie.title}}</li>
+            {% endfor %} -->
+            <!-- {{ macro.displayMovieList(popular)}}
+        </ul> -->
+
+        <!-- Upcoming movie  -->
+        <!-- <h3> Upcoming Movies </h3>
+            <ul> -->
+            <!-- {% for upcoming_movie in upcoming %}
+                <li>{{ upcoming_movie.title}}</li>
+            {% endfor %} -->
+            <!-- {{ macro.displayMovieList(upcoming)}}
+        </ul> -->
+        <!-- Now showing movie -->
+        <!-- <h3>Now Showing</h3>
+            <ul> -->
+            <!-- {% for now_showing_movie in now_showing %}
+                <li>{{ now_showing_movie.title}}</li>
+            {% endfor %} -->
+            <!-- {{ macro.displayMovieList(now_showing)}}
+        </ul>
+    </body>
+        
+   
+</html> -->
+{% extends 'base.html'%}
+{% import 'macros.html' as macro%}
+
+        <!-- Styles block -->
+
+        {% block styles%}
+        {{ super() }}
+        <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+        {% endblock %}
+        <!-- Content block -->
+        {% block content %}
+        <!-- Popular movie -->
+        <h3> Popular Movies</h3>
+        <ul>
+            {{ macro.displayMovieList(popular)}}
+        </ul>
+        <!-- Upcoming movie  -->
+        <h3> Upcoming Movies </h3>
+        <ul>
+            {{ macro.displayMovieList(upcoming)}}
+        </ul>
+        <!-- Now showing movie -->
+        <h3>Now Showing</h3>
+        <ul>
+            {{ macro.displayMovieList(now_showing)}}
+        </ul>
+    
+        {% endblock%}
