--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,45 +1,4 @@
-<!-- <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        {% import 'macros.html' as macro%}
-        {% if title %}
-        <title> {{ title }}</title>
-        {% else %}
-        <title> Welcome to the best Movie Review website </title>
-        {% endif %}
-    </head>
-    <body> -->
 
-        <!-- Popular movie -->
-        <!-- <h3> Popular Movies</h3>
-            <ul> -->
-            <!-- {% for popular_movie in popular %}
-                <li>{{ popular_movie.title}}</li>
-            {% endfor %} -->
-            <!-- {{ macro.displayMovieList(popular)}}
-        </ul> -->
-
-        <!-- Upcoming movie  -->
-        <!-- <h3> Upcoming Movies </h3>
-            <ul> -->
-            <!-- {% for upcoming_movie in upcoming %}
-                <li>{{ upcoming_movie.title}}</li>
-            {% endfor %} -->
-            <!-- {{ macro.displayMovieList(upcoming)}}
-        </ul> -->
-        <!-- Now showing movie -->
-        <!-- <h3>Now Showing</h3>
-            <ul> -->
-            <!-- {% for now_showing_movie in now_showing %}
-                <li>{{ now_showing_movie.title}}</li>
-            {% endfor %} -->
-            <!-- {{ macro.displayMovieList(now_showing)}}
-        </ul>
-    </body>
-        
-   
-</html> -->
 {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
 
@@ -51,6 +10,13 @@
         {% endblock %}
         <!-- Content block -->
         {% block content %}
+        <div class="container">
+            <form>
+                <input type="text" name="movie_query" placeholder="Search for a Movie" class="form-control">
+                <input type="submit"  value="Submit" class="btn btn-default">
+            </form>
+        
+        </div>
         <!-- Popular movie -->
         <h3> Popular Movies</h3>
         <ul>
