--- a/app/templates/movie.html
+++ b/app/templates/movie.html
@@ -13,6 +13,8 @@
 
             <p class="overview"> {{ movie.overview }}</p>
             <p class="ratings"> <b> {{ movie.vote_average }}</b> - <i>{{ movie.vote_count}} votes </i> </p>
+            <a class="ratings" href="/movie/review/new/{{movie.id}}"> Write a new review</a>
+
 
 
         </div>
